--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.firebase:firebase-storage:9.8.0'
+    compile 'com.google.firebase:firebase-auth:9.8.0'
+    compile 'com.google.firebase:firebase-database:9.8.0'
     testCompile 'junit:junit:4.12'
+    compile group:'com.squareup.picasso', name:'picasso', version:'2.5.0'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
