--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile group: 'com.squareup.picasso', name: 'picasso', version: '2.5.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.firebase:firebase-storage:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.android.support:support-v4:23.4.0'
     testCompile 'junit:junit:4.12'
-    compile group:'com.squareup.picasso', name:'picasso', version:'2.5.0'
 }
+
+
 
 
 
