--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.android.support:support-v4:23.4.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:23.0.1'
 }
+
 
 
 
