--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0'
 }
 
 
