--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-storage:0.6.0'
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     testCompile 'junit:junit:4.12'
 }
 
